# simplest-pyo3-trial

./: .gitignore  Cargo.toml  setup.py
rust2py/: __init__.py
src/: lib.rs
